# slidecast

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
src/slidecast/: __init__.py  cli.py  ffmpeg.py  models.py  reel.py  render.py  tts.py  video.py
tests/: fakes.py  test_cli.py  test_ffmpeg.py  test_models.py  test_reel.py  test_tts.py  test_video.py
